; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zpool/extr_zpool_main.c_stat_histo_max.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zpool/extr_zpool_main.c_stat_histo_max.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat_array = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.stat_array*, i32)* @stat_histo_max to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stat_histo_max(%struct.stat_array* %0, i32 %1) #0 {
  %3 = alloca %struct.stat_array*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.stat_array* %0, %struct.stat_array** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %27, %2
  %8 = load i32, i32* %6, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ult i32 %8, %9
  br i1 %10, label %11, label %30

11:                                               ; preds = %7
  %12 = load i32, i32* %5, align 4
  %13 = load %struct.stat_array*, %struct.stat_array** %3, align 8
  %14 = load i32, i32* %6, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.stat_array, %struct.stat_array* %13, i64 %15
  %17 = getelementptr inbounds %struct.stat_array, %struct.stat_array* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.stat_array*, %struct.stat_array** %3, align 8
  %20 = load i32, i32* %6, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.stat_array, %struct.stat_array* %19, i64 %21
  %23 = getelementptr inbounds %struct.stat_array, %struct.stat_array* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @array64_max(i32 %18, i32 %24)
  %26 = call i32 @MAX(i32 %12, i32 %25)
  store i32 %26, i32* %5, align 4
  br label %27

27:                                               ; preds = %11
  %28 = load i32, i32* %6, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %6, align 4
  br label %7

30:                                               ; preds = %7
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @MAX(i32, i32) #1

declare dso_local i32 @array64_max(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
